@@ -9,6 +9,8 @@ Version 0.19.x (RC's for release 0.20.0)
         * Fixed spelling and implement a nicer look in about-dialog
         * Set the video output directory as default directory for mplex
           output
+        * Progressbar and action text added during AC3 and DTS audio-headerlist
+          creation
 
 
 0.19.1: * Removed QT3-Support depencies from TTMpeg2 (the whole project should
